SN-3: complete user activation
